Revert "Tweak tooltip positioning to prevent page overflow / scrolling"
This reverts commit 09cbbac0db87d2968e86396e805e53b0078f92de.

--- a/svelte-kit/src/styles/graph-tooltip.css
+++ b/svelte-kit/src/styles/graph-tooltip.css
@@ -1,6 +1,4 @@
 .popper-tooltip {
-  /* override position: absolute to prevent page overflow / scrolling */
-  position: fixed !important;
   display: none;
   opacity: 0;
   transition: opacity 200ms ease-in;
